.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v3/classSelfMismatch_schema.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/classSelfMismatch_schema.ts(10,54): error TS377046: The `Self` type parameter for this class should be `InvalidSchemaClass`. effect(classSelfMismatch)
/.src/classSelfMismatch_schema.ts(15,54): suggestion TS377045: Identifier 'ValidSchemaTaggedClass' is redundant since it equals the _tag value. effect(redundantSchemaTagIdentifier)
/.src/classSelfMismatch_schema.ts(22,30): error TS377046: The `Self` type parameter for this class should be `InvalidSchemaTaggedClass`. effect(classSelfMismatch)
/.src/classSelfMismatch_schema.ts(22,54): suggestion TS377045: Identifier 'InvalidSchemaTaggedClass' is redundant since it equals the _tag value. effect(redundantSchemaTagIdentifier)
/.src/classSelfMismatch_schema.ts(28,54): suggestion TS377045: Identifier 'ValidSchemaTaggedError' is redundant since it equals the _tag value. effect(redundantSchemaTagIdentifier)
/.src/classSelfMismatch_schema.ts(35,30): error TS377046: The `Self` type parameter for this class should be `InvalidSchemaTaggedError`. effect(classSelfMismatch)
/.src/classSelfMismatch_schema.ts(35,54): suggestion TS377045: Identifier 'InvalidSchemaTaggedError' is redundant since it equals the _tag value. effect(redundantSchemaTagIdentifier)
/.src/classSelfMismatch_schema.ts(41,58): suggestion TS377045: Identifier 'ValidSchemaTaggedRequest' is redundant since it equals the _tag value. effect(redundantSchemaTagIdentifier)
/.src/classSelfMismatch_schema.ts(50,32): error TS377046: The `Self` type parameter for this class should be `InvalidSchemaTaggedRequest`. effect(classSelfMismatch)
/.src/classSelfMismatch_schema.ts(50,58): suggestion TS377045: Identifier 'InvalidSchemaTaggedRequest' is redundant since it equals the _tag value. effect(redundantSchemaTagIdentifier)


==== /.src/classSelfMismatch_schema.ts (10 errors) ====
    // @effect-v3
    import * as Schema from "effect/Schema"
    
    // valid usage
    export class ValidSchemaClass extends Schema.Class<ValidSchemaClass>("ValidSchemaClass")({
      prop: Schema.String
    }) {}
    
    // invalid usage: Schema.Class<ValidSchemaClass> should be Schema.Class<InvalidSchemaClass> because the Self type parameter is not the same as the class name
    export class InvalidSchemaClass extends Schema.Class<ValidSchemaClass>("InvalidSchemaClass")({
                                                         ~~~~~~~~~~~~~~~~
!!! error TS377046: The `Self` type parameter for this class should be `InvalidSchemaClass`. effect(classSelfMismatch)
      prop: Schema.String
    }) {}
    
    export class ValidSchemaTaggedClass
      extends Schema.TaggedClass<ValidSchemaTaggedClass>("ValidSchemaTaggedClass")("ValidSchemaTaggedClass", {
                                                         ~~~~~~~~~~~~~~~~~~~~~~~~
!!! suggestion TS377045: Identifier 'ValidSchemaTaggedClass' is redundant since it equals the _tag value. effect(redundantSchemaTagIdentifier)
        prop: Schema.String
      })
    {}
    
    // invalid usage: Schema.TaggedClass<ValidSchemaTaggedClass> should be Schema.TaggedClass<InvalidSchemaTaggedClass> because the Self type parameter is not the same as the class name
    export class InvalidSchemaTaggedClass
      extends Schema.TaggedClass<ValidSchemaTaggedClass>("InvalidSchemaTaggedClass")("InvalidSchemaTaggedClass", {
                                 ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS377046: The `Self` type parameter for this class should be `InvalidSchemaTaggedClass`. effect(classSelfMismatch)
                                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! suggestion TS377045: Identifier 'InvalidSchemaTaggedClass' is redundant since it equals the _tag value. effect(redundantSchemaTagIdentifier)
        prop: Schema.String
      })
    {}
    
    export class ValidSchemaTaggedError
      extends Schema.TaggedError<ValidSchemaTaggedError>("ValidSchemaTaggedError")("ValidSchemaTaggedError", {
                                                         ~~~~~~~~~~~~~~~~~~~~~~~~
!!! suggestion TS377045: Identifier 'ValidSchemaTaggedError' is redundant since it equals the _tag value. effect(redundantSchemaTagIdentifier)
        prop: Schema.String
      })
    {}
    
    // invalid usage: Schema.TaggedError<ValidSchemaTaggedError> should be Schema.TaggedError<InvalidSchemaTaggedError> because the Self type parameter is not the same as the class name
    export class InvalidSchemaTaggedError
      extends Schema.TaggedError<ValidSchemaTaggedError>("InvalidSchemaTaggedError")("InvalidSchemaTaggedError", {
                                 ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS377046: The `Self` type parameter for this class should be `InvalidSchemaTaggedError`. effect(classSelfMismatch)
                                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! suggestion TS377045: Identifier 'InvalidSchemaTaggedError' is redundant since it equals the _tag value. effect(redundantSchemaTagIdentifier)
        prop: Schema.String
      })
    {}
    
    export class ValidSchemaTaggedRequest
      extends Schema.TaggedRequest<ValidSchemaTaggedRequest>("ValidSchemaTaggedRequest")("ValidSchemaTaggedRequest", {
                                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! suggestion TS377045: Identifier 'ValidSchemaTaggedRequest' is redundant since it equals the _tag value. effect(redundantSchemaTagIdentifier)
        payload: {},
        success: Schema.Void,
        failure: Schema.Never
      })
    {}
    
    // invalid usage: Schema.TaggedRequest<ValidSchemaTaggedRequest> should be Schema.TaggedRequest<InvalidSchemaTaggedRequest> because the Self type parameter is not the same as the class name
    export class InvalidSchemaTaggedRequest
      extends Schema.TaggedRequest<ValidSchemaTaggedRequest>("InvalidSchemaTaggedRequest")("InvalidSchemaTaggedRequest", {
                                   ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS377046: The `Self` type parameter for this class should be `InvalidSchemaTaggedRequest`. effect(classSelfMismatch)
                                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! suggestion TS377045: Identifier 'InvalidSchemaTaggedRequest' is redundant since it equals the _tag value. effect(redundantSchemaTagIdentifier)
        payload: {},
        success: Schema.Void,
        failure: Schema.Never
      })
    {}
    
